<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">相机测量</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pic_save">PicSaveActivity</string>
    <string name="xAccele">X Acceleration:</string>
    <string name="yAccele">Y Acceleration:</string>
    <string name="zAccele">Z Acceleration:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="velocity">Velocity:</string>
    <string name="bearing">Bearing:</string>
    <string name="heading">HeadingAngle:</string>
    <string name="pitch">PitchAngle:</string>
    <string name="roll">RollAngle:</string>
    <string name="empty"></string>
    <string name="title_activity_work">WorkActivity</string>
    <string name="title_activity_other_work">OtherWorkActivity</string>
    <string name="camera_height">相机高度</string>
    <string name="unit">m</string>
    <string name="unit_1">mm</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="move_steps">移动步长</string>
    <string name="set_values">设置CCD\n象元值</string>
    <string name="f1">f1</string>
    <string name="f2">f2</string>

</resources>