<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/camera_height"
            android:layout_marginLeft="15dp"
            style="@style/TextView"
            android:text="@string/camera_height" />

        <EditText
            android:id="@+id/edit_camera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@id/camera_height" />

        <TextView
            style="@style/TextView1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:text="@string/unit" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/move_steps"
            style="@style/TextView"
             android:layout_marginLeft="15dp"
            android:text="@string/move_steps" />

        <EditText
            android:id="@+id/edit_steps"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@id/move_steps" />

        <TextView
            style="@style/TextView1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:text="@string/unit" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/steps"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/set_values"
            style="@style/TextView"
             android:layout_marginLeft="15dp"
            android:text="@string/set_values" />

        <EditText
            android:id="@+id/edit_values"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@id/set_values" />

        <TextView
            style="@style/TextView1"
            android:layout_alignParentRight="true"
            android:text="@string/unit_1" />
    </RelativeLayout>

 <!--    <LinearLayout
        android:id="@+id/r_f1f2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/values"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/r_f1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/f1"
                style="@style/TextView"
                 android:layout_marginLeft="15dp"
                android:text="@string/f1" />

            <EditText
                android:id="@+id/edit_f1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@id/f1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:text="@string/unit_1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r_f2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/f2"
                style="@style/TextView"
                android:text="@string/f2" 
                android:layout_marginLeft="10dp"/>

            <EditText
                android:id="@+id/edit_f2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@id/f2" />

           <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:text="@string/unit_1" />
        </RelativeLayout>
    </LinearLayout> -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/values"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ensure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ensure"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>